--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="canvas">
     </div>
+    <button class="marker">Marker</button>
+    <button class="eraser">Eraser</button>
+    <button class="clear">Clear</button>
 </body>
 <script src="./script.js"></script>
 </html>
