Change box sizing and add init()

--- a/index.html
+++ b/index.html
@@ -9,13 +9,28 @@
     <link rel="shortcut icon" type="image/jpg" href="./pencil.jpg">
 </head>
 <body>
-    <div id="canvas">
-    </div>
-    <button id="markerBtn">Marker</button>
-    <button id="eraserBtn">Eraser</button>
-    <button id="clearBtn">Clear</button>
-    <input type="range" value="16" min="10" max="64" id="sizeSlider" />
-    <span id="sizeValue">16 x 16</span>
+    <header>
+        <nav>
+            <h1 id="pageTitle">Title of Page</h1>
+        </nav>
+    </header>
+    <main>
+        <div id="canvasContainer">
+            <div id="canvas">
+            </div>
+        </div>
+        <div id="controls">
+            <button id="markerBtn">Marker</button>
+            <button id="eraserBtn">Eraser</button>
+            <button id="clearBtn">Clear</button>
+            <input type="range" value="16" min="10" max="64" id="sizeSlider" />
+            <span id="sizeValue">16 x 16</span>
+        </div>
+    </main>
+    <footer>
+        Copyright blah blah
+    </footer>
+    
 </body>
 <script src="./script.js"></script>
 </html>
