--- a/index.html
+++ b/index.html
@@ -7,24 +7,31 @@
     <title>Etch-A-Sketch</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" type="image/jpg" href="./pencil.jpg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav>
-            <h1 id="pageTitle">Title of Page</h1>
-        </nav>
+            
     </header>
     <main>
+        <div id="left">
+            <h1 id="pageTitle">Etch-A-Sketch</h1>
+            <div id="controls">
+                <button id="markerBtn">Marker</button>
+                <button id="eraserBtn">Eraser</button>
+                <button id="clearBtn">Clear</button>
+                <p id="sizeValue">16 x 16</p>
+                <input type="range" value="16" min="10" max="64" id="sizeSlider" />
+            </div>
+        </div>
         <div id="canvasContainer">
             <div id="canvas">
             </div>
-        </div>
-        <div id="controls">
-            <button id="markerBtn">Marker</button>
-            <button id="eraserBtn">Eraser</button>
-            <button id="clearBtn">Clear</button>
-            <input type="range" value="16" min="10" max="64" id="sizeSlider" />
-            <span id="sizeValue">16 x 16</span>
         </div>
     </main>
     <footer>
