--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-            
-    </header>
     <main>
         <div id="left">
             <h1 id="pageTitle">Etch-A-Sketch</h1>
             <div id="controls">
-                <button id="markerBtn">Marker</button>
-                <button id="eraserBtn">Eraser</button>
-                <button id="clearBtn">Clear</button>
+                <input type="color" value='#333' id="colorPicker">
+                <button id="markerBtn" class="btn">Marker</button>
+                <button id="eraserBtn" class="btn">Eraser</button>
+                <button id="clearBtn" class="btn">Clear</button>
                 <p id="sizeValue">16 x 16</p>
                 <input type="range" value="16" min="10" max="64" id="sizeSlider" />
             </div>
@@ -35,7 +33,7 @@
         </div>
     </main>
     <footer>
-        Copyright blah blah
+        <p id="footerText">Copyright &copy; 2023 Andrew Gabra</p>
     </footer>
     
 </body>
