--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </main>
     <footer>
-        <p id="footerText">Copyright &copy; 2023 Andrew Gabra</p>
+        <p id="footerText">Copyright &copy; <span id="year"></span> Andrew Gabra</p>
     </footer>
     
 </body>
